[gd_scene load_steps=25 format=3 uid="uid://fei0lajm6qpm"]

[ext_resource type="Script" uid="uid://c5b06od6h1qxl" path="res://script/playerfox.gd" id="1_0egd1"]
[ext_resource type="Texture2D" uid="uid://bwlpkox6266e4" path="res://asset_bundle/AssetBundle/Sprites/Foxy.png" id="1_kukx1"]
[ext_resource type="PackedScene" uid="uid://d3i5cee786w5t" path="res://scence/bullet.tscn" id="2_mcwx8"]
[ext_resource type="AudioStream" uid="uid://ksrjswi3esh0" path="res://asset_bundle/AssetBundle/Audio/Gun.mp3" id="4_8ijhr"]
[ext_resource type="AudioStream" uid="uid://bkq37mm1mbm18" path="res://asset_bundle/AssetBundle/Audio/GameOver.mp3" id="5_hnbia"]
[ext_resource type="AudioStream" uid="uid://bwjsrc2ypg6lt" path="res://asset_bundle/AssetBundle/Audio/Running.mp3" id="5_klv8t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5lkqp"]
atlas = ExtResource("1_kukx1")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7jop"]
atlas = ExtResource("1_kukx1")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8fn0"]
atlas = ExtResource("1_kukx1")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1upc"]
atlas = ExtResource("1_kukx1")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7csg"]
atlas = ExtResource("1_kukx1")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls7pu"]
atlas = ExtResource("1_kukx1")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0egd1"]
atlas = ExtResource("1_kukx1")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcwx8"]
atlas = ExtResource("1_kukx1")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ijhr"]
atlas = ExtResource("1_kukx1")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnbia"]
atlas = ExtResource("1_kukx1")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klv8t"]
atlas = ExtResource("1_kukx1")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj3bu"]
atlas = ExtResource("1_kukx1")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilutb"]
atlas = ExtResource("1_kukx1")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axetj"]
atlas = ExtResource("1_kukx1")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nog6e"]
atlas = ExtResource("1_kukx1")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7swg"]
atlas = ExtResource("1_kukx1")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_klv8t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lkqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7jop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8fn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1upc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7csg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls7pu")
}],
"loop": true,
"name": &"gameover",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0egd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcwx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ijhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnbia")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klv8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj3bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilutb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axetj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nog6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7swg")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0egd1"]

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("animator")]
script = ExtResource("1_0egd1")
move_speed = 200.0
animator = NodePath("AnimatedSprite2D")
bullet_scene = ExtResource("2_mcwx8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_klv8t")
animation = &"gameover"
autoplay = "idle"
frame_progress = 0.859508

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_0egd1")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8ijhr")

[node name="running" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_klv8t")

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hnbia")

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="on_fire"]
[connection signal="timeout" from="RestartTimer" to="." method="reload_scene"]
